@@ -1694,7 +1694,7 @@ static void HandlePanelPress(button_info *b)
   if (is_mapped)
   {
     /* don't slide the window if it has been moved or resized */
-    if (b->x != x1 || b->y != y1 || b->w != w1 || b->h != h1)
+    if (b->x != x1 + lb || b->y != y1 + tb || b->w != w1 || b->h != h1)
     {
       steps = 0;
     }
@@ -2426,7 +2426,8 @@ static void GetPanelGeometry(
   }
 
   /* relative corrections in % or pixel */
-  *x = *y = 0;
+  *x = 0;
+  *y = 0;
   if (b->relative_x != 0)
   {
     if (b->panel_flags.relative_x_pixel)
@@ -2543,6 +2544,8 @@ static void GetPanelGeometry(
     }
     break;
   }
+  *y -= tb;
+  *x -= lb;
 
   return;
 }
