@@ -1,3 +1,8 @@
+2000-01-07  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/events.c (HandleConfigureRequest):
+	fixed ConfigureRequest handling
+
 1999-12-22  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm/style.c (ProcessNewStyle): fixed Style * Button/NoButton
